# outages-ge

./: .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml  settings.py
app/: cli.py
app/db/: __init__.py  models.py
app/parser/: base.py  exceptions.py  gwp.py
migrations/: env.py
migrations/versions/: 08834bcff79a_.py  3d93148c2fa6_init_migration.py  66f2e67a36df_add_osm_id_col_to_street_model.py  d0d1c59e518c_init_migration.py  d8b31a655620_.py
static/: tbilisi_districts.geojson
static/css/: main.css
templates/: base.html  index.html  map.html
templates/components/: footer.html  header.html
