[tool.poetry]
name = "outages-ge"
version = "0.1.0"
description = "An app that consolidates public outage data in Georgia (Sakartvelo)"
authors = ["roaddust2 <ma.khalitov@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
jinja2 = "^3.1.3"
beautifulsoup4 = "^4.12.3"
flake8 = "^7.0.0"
fastapi = {extras = ["all"], version = "^0.110.3"}
pytest = "^8.2.0"
overpy = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
